@@ -1,4 +1,4 @@
-//$Header: /as4/de/mendelson/util/httpconfig/server/HTTPServerConfigInfoProcessor.java 19    3/02/25 11:14 Heller $
+//$Header: /as2/de/mendelson/util/httpconfig/server/HTTPServerConfigInfoProcessor.java 22    24/03/26 18:05 Heller $
 package de.mendelson.util.httpconfig.server;
 
 import de.mendelson.util.MecResourceBundle;
@@ -6,19 +6,19 @@ import de.mendelson.util.httpconfig.clientserver.DisplayHTTPServerConfigurationR
 import de.mendelson.util.httpconfig.clientserver.DisplayHTTPServerConfigurationResponse;
 import de.mendelson.util.security.cert.CertificateManager;
 import de.mendelson.util.security.cert.KeystoreCertificate;
-import java.io.BufferedReader;
-import java.io.InputStreamReader;
-import java.net.InetAddress;
-import java.net.URL;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.text.DateFormat;
-import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.MissingResourceException;
 import java.util.ResourceBundle;
 import org.apache.mina.core.session.IoSession;
+import java.net.InetAddress;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 /*
  * Copyright (C) mendelson-e-commerce GmbH Berlin Germany
@@ -31,12 +31,22 @@ import org.apache.mina.core.session.IoSession;
  * Processes a http config request on the server side
  *
  * @author S.Heller
- * @version $Revision: 19 $
+ * @version $Revision: 22 $
  */
 public class HTTPServerConfigInfoProcessor {
 
     private final HTTPServerConfigInfo httpServerConfigInfo;
-    private final MecResourceBundle rb;
+    private static final MecResourceBundle rb;
+
+    static {
+        try {
+            rb = (MecResourceBundle) ResourceBundle.getBundle(
+                    ResourceBundleHTTPServerConfigProcessor.class.getName());
+        } //load up  resourcebundle
+        catch (MissingResourceException e) {
+            throw new RuntimeException("Oops..resource bundle " + e.getClassName() + " not found.");
+        }
+    }
     private String miscConfigurationText = "No HTTP server found";
     private String protocolConfigurationText = "No HTTP server found";
     private String cipherConfigurationText = "No HTTP server found";
@@ -44,14 +54,6 @@ public class HTTPServerConfigInfoProcessor {
     public HTTPServerConfigInfoProcessor(HTTPServerConfigInfo httpServerConfigInfo,
             CertificateManager certificateManagerTLS) {
         this.httpServerConfigInfo = httpServerConfigInfo;
-        //Load default resourcebundle
-        try {
-            this.rb = (MecResourceBundle) ResourceBundle.getBundle(
-                    ResourceBundleHTTPServerConfigProcessor.class.getName());
-        } //load up  resourcebundle
-        catch (MissingResourceException e) {
-            throw new RuntimeException("Oops..resource bundle " + e.getClassName() + " not found.");
-        }
         if (httpServerConfigInfo != null) {
             this.miscConfigurationText = this.generateMiscConfigurationText(certificateManagerTLS);
             this.protocolConfigurationText = this.generateProtocolConfigurationText();
@@ -79,7 +81,7 @@ public class HTTPServerConfigInfoProcessor {
                 adapterStr = listener.getAdapter();
             }
             logBuilder.append(
-                    this.rb.getResourceString("http.server.config.listener",
+                    rb.getResourceString("http.server.config.listener",
                             new Object[]{String.valueOf(listener.getPort()),
                                 protocol,
                                 adapterStr
@@ -103,7 +105,7 @@ public class HTTPServerConfigInfoProcessor {
         }
         logBuilder.append("\n");
         logBuilder.append("\n");
-        logBuilder.append(this.rb.getResourceString("http.receipturls"));
+        logBuilder.append(rb.getResourceString("http.receipturls"));
         logBuilder.append("\n");
         for (String receiptURL : receiptURLList) {
             logBuilder.append(receiptURL);
@@ -111,7 +113,7 @@ public class HTTPServerConfigInfoProcessor {
         }
         if (!serverStateURLList.isEmpty()) {
             logBuilder.append("\n");
-            logBuilder.append(this.rb.getResourceString("http.serverstateurl"));
+            logBuilder.append(rb.getResourceString("http.serverstateurl"));
             logBuilder.append("\n");
             logBuilder.append(serverStateURLList.get(0).replace("<HOST>", hostName.toString()));
             logBuilder.append("\n");
@@ -127,10 +129,10 @@ public class HTTPServerConfigInfoProcessor {
                 }
             }
             if (tlsKey == null) {
-                logBuilder.append(this.rb.getResourceString("http.server.config.tlskey.none")).append("\n");
+                logBuilder.append(rb.getResourceString("http.server.config.tlskey.none")).append("\n");
             } else {
-                DateFormat format = SimpleDateFormat.getDateInstance(DateFormat.MEDIUM);
-                logBuilder.append(this.rb.getResourceString("http.server.config.tlskey.info",
+                DateFormat format = DateFormat.getDateInstance(DateFormat.MEDIUM);
+                logBuilder.append(rb.getResourceString("http.server.config.tlskey.info",
                         new Object[]{
                             tlsKey.getAlias(),
                             tlsKey.getFingerPrintSHA1(),
@@ -138,68 +140,80 @@ public class HTTPServerConfigInfoProcessor {
                             format.format(tlsKey.getNotAfter())
                         })).append("\n");
             }
-            logBuilder.append(this.rb.getResourceString("http.server.config.clientauthentication",
+            logBuilder.append(rb.getResourceString("http.server.config.clientauthentication",
                     String.valueOf(this.httpServerConfigInfo.needsClientAuthentication())));
         }
         //add the deployed WAR info
         logBuilder.append("\n");
         logBuilder.append("\n");
-        logBuilder.append(this.rb.getResourceString("http.deployedwars"));
+        logBuilder.append(rb.getResourceString("http.deployedwars"));
         logBuilder.append("\n");
         List<String> deployedWars = this.httpServerConfigInfo.getDeployedWars();
         if (deployedWars.isEmpty()) {
             logBuilder.append("--\n");
         }
         for (String deployedWARPath : deployedWars) {
-            Path path = Paths.get(deployedWARPath);
-            logBuilder.append("[");
-            String filename = path.getFileName().toString();
-            if (this.rb.containsResourceString("webapp." + filename)) {
-                logBuilder.append(this.rb.getResourceString("webapp." + filename));
-            } else {
-                logBuilder.append(this.rb.getResourceString("webapp._unknown"));
+            Path path = null;
+            try {
+                if (deployedWARPath.startsWith("file:")) {
+                    path = Paths.get(URI.create(deployedWARPath));
+                } else {
+                    path = Paths.get(deployedWARPath);
+                }
+                logBuilder.append("[");
+                String filename = path.getFileName().toString();
+                if (rb.containsResourceString("webapp." + filename)) {
+                    logBuilder.append(rb.getResourceString("webapp." + filename));
+                } else {
+                    logBuilder.append(rb.getResourceString("webapp._unknown"));
+                }
+                logBuilder.append("] ");
+                logBuilder.append(path.toAbsolutePath().toString());
+                logBuilder.append("\n");
+            } catch (Exception e) {
+                // Fallback if the path parser fails
+                logBuilder.append("[?] ").append(deployedWARPath).append("\n");
             }
-            logBuilder.append("] ");
-            logBuilder.append(deployedWARPath);
-            logBuilder.append("\n");
         }
         return (logBuilder.toString());
     }
 
     private String generatePublicWANText(StringBuilder ipBuilder, StringBuilder hostNameBuilder) {
         StringBuilder logBuilder = new StringBuilder();
-        //find out WAN IP
-        String hostname = null;
         try {
-            URL whatismyip = new URL("http://mendelson-e-c.com/mendelson_whatsmyip.php");
-            String ip;
-            try (BufferedReader in = new BufferedReader(new InputStreamReader(
-                    whatismyip.openStream()))) {
-                ip = in.readLine(); //you get the IP as a String
-                if (ip == null) {
-                    ip = "Unknown IP";
-                }
+            //Create HTTP client with automatic redirect handling
+            HttpClient client = HttpClient.newBuilder()
+                    .followRedirects(HttpClient.Redirect.ALWAYS)
+                    .build();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(URI.create("http://mendelson.de/mendelson_whatsmyip.php"))
+                    .GET()
+                    .build();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            //Extract IP address from response body
+            String ip = response.body();
+            if (ip == null || ip.isBlank()) {
+                ip = "Unknown IP";
             }
-            //try to get host name for the answer            
-            hostname = "Unknown host";
+            String hostname = "Unknown host";
             try {
-                hostname = InetAddress.getByName(ip).getHostName();
+                hostname = InetAddress.getByName(ip.trim()).getHostName();
             } catch (Exception e) {
-                //nop
+                // ignore lookup failures
             }
             ipBuilder.append(ip);
             hostNameBuilder.append(hostname);
-            logBuilder.append(this.rb.getResourceString("external.ip",
-                    new Object[]{ip, hostname}));
+            logBuilder.append(rb.getResourceString("external.ip", new Object[]{ip, hostname}));
+
         } catch (Exception e) {
-            logBuilder.append(this.rb.getResourceString("external.ip.error"));
+            logBuilder.append(rb.getResourceString("external.ip.error"));
         }
-        return (logBuilder.toString());
+        return logBuilder.toString();
     }
 
     private String generateProtocolConfigurationText() {
         StringBuilder protocolBuilder = new StringBuilder();
-        protocolBuilder.append(fold(this.rb.getResourceString("info.protocols",
+        protocolBuilder.append(fold(rb.getResourceString("info.protocols",
                 new Object[]{
                     this.httpServerConfigInfo.getHTTPServerConfigFile().normalize().toAbsolutePath().toString(),
                     this.httpServerConfigInfo.getJavaVersion(),
@@ -211,7 +225,7 @@ public class HTTPServerConfigInfoProcessor {
             protocolBuilder.append("\n");
         }
         protocolBuilder.append("\n\n");
-        protocolBuilder.append(fold(this.rb.getResourceString("info.protocols.howtochange",
+        protocolBuilder.append(fold(rb.getResourceString("info.protocols.howtochange",
                 new Object[]{
                     this.httpServerConfigInfo.getHTTPServerConfigFile().normalize().toAbsolutePath().toString()
                 }), "\n", 80));
@@ -221,7 +235,7 @@ public class HTTPServerConfigInfoProcessor {
 
     private String generateCipherConfigurationText() {
         StringBuilder cipherBuilder = new StringBuilder();
-        cipherBuilder.append(fold(this.rb.getResourceString("info.cipher",
+        cipherBuilder.append(fold(rb.getResourceString("info.cipher",
                 new Object[]{
                     this.httpServerConfigInfo.getHTTPServerConfigFile().normalize().toAbsolutePath().toString(),
                     this.httpServerConfigInfo.getJavaVersion()
@@ -232,7 +246,7 @@ public class HTTPServerConfigInfoProcessor {
             cipherBuilder.append("\n");
         }
         cipherBuilder.append("\n\n");
-        cipherBuilder.append(fold(this.rb.getResourceString("info.cipher.howtochange",
+        cipherBuilder.append(fold(rb.getResourceString("info.cipher.howtochange",
                 new Object[]{
                     this.httpServerConfigInfo.getHTTPServerConfigFile().normalize().toAbsolutePath().toString(),}), "\n", 80));
         return (cipherBuilder.toString());
@@ -248,7 +262,7 @@ public class HTTPServerConfigInfoProcessor {
             response.setHTTPServerUserConfigFile(this.httpServerConfigInfo.getHTTPServerUserConfigFile().normalize().toAbsolutePath().toString());
             response.setEmbeddedJettyServerVersion(this.httpServerConfigInfo.getJettyHTTPServerVersion());
             response.setEmbeddedHTTPServerStarted(this.httpServerConfigInfo.isEmbeddedHTTPServerStarted());
-            response.setSSLEnabled(this.httpServerConfigInfo.isSSLEnabled());
+            response.setTLSEnabled(this.httpServerConfigInfo.isSSLEnabled());
             response.setJavaVersion(this.httpServerConfigInfo.getJavaVersion());
             if (this.httpServerConfigInfo.isSSLEnabled()) {
                 for (String protocol : this.httpServerConfigInfo.getPossibleProtocols()) {
